Issue #18997: fix ElementTree crash with using pickle and __getstate__.

Based on report and initial patch from Germán M. Bravo